--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "recoil": "^0.7.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
